// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test /api/top-langs should test the request 1`] = `
"
      <svg
        width="300"
        height="135"
        viewBox="0 0 300 135"
        fill="none"
        xmlns="http://www.w3.org/2000/svg"
        role="img"
        aria-labelledby="descId"
      >
        <title id="titleId">Languages</title>
        <desc id="descId">Python 500, javascript 400</desc>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .bold { font-weight: 700 }
    .lang-name {
      font: 400 11px "Segoe UI", Ubuntu, Sans-Serif;
      fill: #434d58;
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
          
        </style>

        

        <rect
          data-testid="card-bg"
          x="0.5"
          y="0.5"
          rx="4.5"
          height="99%"
          stroke="#e4e2e2"
          width="299"
          fill="#fffefe"
          stroke-opacity="0"
        />

        

        <g
          data-testid="main-card-body"
          transform="translate(0, 25)"
        >
          
    <svg data-testid="lang-items" x="25">
      <g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">Python</text>
      <text x="215" y="34" class="lang-name">55.56%</text>
      
    <svg width="205" x="0" y="25">
      <rect rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"></rect>
      <svg data-testid="lang-progress" width="55.55555555555556%">
        <rect
            height="8"
            fill="#3572A5"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 750ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 40)">
    <g class="stagger" style="animation-delay: 600ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">javascript</text>
      <text x="215" y="34" class="lang-name">44.44%</text>
      
    <svg width="205" x="0" y="25">
      <rect rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"></rect>
      <svg data-testid="lang-progress" width="44.44444444444444%">
        <rect
            height="8"
            fill="#0ff"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 900ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g>
    </svg>
  
        </g>
      </svg>
    "
`;

exports[`Test /api/top-langs should work with the query options 1`] = `
"
      <svg
        width="280"
        height="135"
        viewBox="0 0 280 135"
        fill="none"
        xmlns="http://www.w3.org/2000/svg"
        role="img"
        aria-labelledby="descId"
      >
        <title id="titleId">Languages</title>
        <desc id="descId">Python 500, javascript 400</desc>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #fff;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #fff;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .bold { font-weight: 700 }
    .lang-name {
      font: 400 11px "Segoe UI", Ubuntu, Sans-Serif;
      fill: #fff;
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
          
        </style>

        

        <rect
          data-testid="card-bg"
          x="0.5"
          y="0.5"
          rx="4.5"
          height="99%"
          stroke="#e4e2e2"
          width="279"
          fill="#fff"
          stroke-opacity="0"
        />

        

        <g
          data-testid="main-card-body"
          transform="translate(0, 25)"
        >
          
    <svg data-testid="lang-items" x="25">
      <g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">Python</text>
      <text x="195" y="34" class="lang-name">55.56%</text>
      
    <svg width="185" x="0" y="25">
      <rect rx="5" ry="5" x="0" y="0" width="185" height="8" fill="#ddd"></rect>
      <svg data-testid="lang-progress" width="55.55555555555556%">
        <rect
            height="8"
            fill="#3572A5"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 750ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 40)">
    <g class="stagger" style="animation-delay: 600ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">javascript</text>
      <text x="195" y="34" class="lang-name">44.44%</text>
      
    <svg width="185" x="0" y="25">
      <rect rx="5" ry="5" x="0" y="0" width="185" height="8" fill="#ddd"></rect>
      <svg data-testid="lang-progress" width="44.44444444444444%">
        <rect
            height="8"
            fill="#0ff"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 900ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g>
    </svg>
  
        </g>
      </svg>
    "
`;
